samples/_failures_safe/1761333075_ed69f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d83fef7.c: In function ‘main’:
./samples/SAFE/__tmp_9d83fef7.c:159:17: error: expected expression at end of input
  159 |                 if (status == 1)
      |                 ^~
./samples/SAFE/__tmp_9d83fef7.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d83fef7.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d83fef7.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d83fef7.c:159:17: error: expected declaration or statement at end of input
